tests/type_errors/maximum_func_variant.nos
# expect: Blue
# Variants auto-derive Ord by declaration order: Red=0, Green=1, Blue=2
type Color = Red | Green | Blue
main() = maximum([Red, Green, Blue])
